padmin1/qa/sso-static-content/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/whitelist-source-range: 104.255.92.0/22,64.58.208.0/20,50.232.112.210/32,74.87.29.234/32,76.80.19.66/32,52.20.56.58/32,213.61.67.128/29,187.93.211.106/32,191.8.186.233/32,34.225.21.77/32,34.234.55.178/32,34.232.215.140/32,52.67.212.70/32,3.105.220.138/32,13.210.248.49/32,52.67.44.15/32,52.207.178.229/32,34.224.128.39/32,35.174.80.191/32,18.229.27.12/32,54.233.165.131/32,34.198.227.225/32,34.198.242.124/32,52.55.87.25/32,34.234.251.63/32,52.207.71.2/32,35.170.232.32/32,5 [...]
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
  creationTimestamp: null
  labels:
    app: sso-static-content
    env: qa
    maestro: "true"
    maestroversion: v2
    team: sso
  name: sso-static-content
spec:
  backend:
    serviceName: sso-static-content
    servicePort: 80
  rules:
  - host: static.qa.admin.sharecare.com
    http:
      paths:
      - backend:
          serviceName: sso-static-content
          servicePort: 80
        path: /
status:
  loadBalancer: {}
